<?xml version="1.0" encoding="utf-8"?>
<settings>
    <category name="Launcher">
        <setting
            id="persist.bliss.disable_primary_taskbar"
            name="@string/setting_disable_primary_taskbar_name"
            description="@string/setting_disable_primary_taskbar_description"
            type="system_property" />
        <setting
            id="persist.bliss.disable_taskbar"
            name="@string/setting_disable_taskbar_name"
            description="@string/setting_disable_taskbar_description"
            type="system_property" />
        <setting
            id="persist.bliss.disable_secondary_taskbar"
            name="@string/setting_disable_secondary_taskbar_name"
            description="@string/setting_disable_secondary_taskbar_description"
            type="system_property" />
        <setting
            id="persist.launcher3.pin_taskbar"
            name="@string/setting_pin_taskbar_name"
            description="@string/setting_pin_taskbar_description"
            type="system_property" />
        <setting
            id="persist.launcher3.is_in_desktop_mode"
            name="@string/setting_is_in_desktop_mode_name"
            description="@string/setting_is_in_desktop_mode_description"
            type="system_property" />
    </category>
    <category name="Display">
        <setting
            id="persist.force.acms_displays"
            name="@string/setting_force_acms_displays_name"
            description="@string/setting_force_acms_displays_description"
            type="system_property" />
        <setting
            id="persist.force.dep_displays"
            name="@string/setting_disable_external_presentation_displays_name"
            description="@string/setting_disable_external_presentation_displays_description"
            type="system_property" />
        <setting
            id="persist.force.external_presentation_displays"
            name="@string/setting_force_external_presentation_displays_name"
            description="@string/setting_force_external_presentation_displays_description"
            type="system_property" />
        <setting
            id="persist.force.external_trusted_displays"
            name="@string/setting_force_external_trusted_displays_name"
            description="@string/setting_force_external_trusted_displays_description"
            type="system_property" />
        <setting
            id="persist.force.secure_displays"
            name="@string/setting_force_secure_displays_name"
            description="@string/setting_force_secure_displays_description"
            type="system_property" />
        <setting
            id="persist.force.supports_protected_displays"
            name="@string/setting_force_supports_protected_displays_name"
            description="@string/setting_force_supports_protected_displays_description"
            type="system_property" />
        <setting
            id="persist.force.private_displays"
            name="@string/setting_force_private_displays_name"
            description="@string/setting_force_private_displays_description"
            type="system_property" />
        <setting
            id="persist.force.presentation_displays"
            name="@string/setting_force_presentation_displays_name"
            description="@string/setting_force_presentation_displays_description"
            type="system_property" />
        <setting
            id="persist.force.scaling_disabled_displays"
            name="@string/setting_force_scaling_disabled_displays_name"
            description="@string/setting_force_scaling_disabled_displays_description"
            type="system_property" />
        <setting
            id="persist.force.cswik_displays"
            name="@string/setting_force_cswik_displays_name"
            description="@string/setting_force_cswik_displays_description"
            type="system_property" />
        <setting
            id="persist.force.sssd_displays"
            name="@string/setting_force_sssd_displays_name"
            description="@string/setting_force_sssd_displays_description"
            type="system_property" />
        <setting
            id="persist.force.trusted_displays"
            name="@string/setting_force_trusted_displays_name"
            description="@string/setting_force_trusted_displays_description"
            type="system_property" />
        <setting
            id="persist.force.rear_displays"
            name="@string/setting_force_rear_displays_name"
            description="@string/setting_force_rear_displays_description"
            type="system_property" />
    </category>
    <category name="WindowManager">
        <setting
            id="force_desktop_mode_on_external_displays"
            name="@string/setting_force_desktop_mode_on_external_displays_name"
            description="@string/setting_force_desktop_mode_on_external_displays_description"
            type="global" />
        <setting
            id="persist.force.freeform_windowing_mode"
            name="@string/setting_force_freeform_windowing_mode_name"
            description="@string/setting_force_freeform_windowing_mode_description"
            type="system_property" />
        <setting
            id="persist.force.fullscreen_windowing_mode"
            name="@string/setting_force_fullscreen_windowing_mode_name"
            description="@string/setting_force_fullscreen_windowing_mode_description"
            type="system_property" />
        <setting
            id="persist.wm.debug.hide_navbar_window"
            name="@string/setting_hide_navbar_window_name"
            description="@string/setting_hide_navbar_window_description"
            type="system_property" />
        <setting
            id="persist.wm.debug.desktop_experience_devopts"
            name="@string/setting_desktop_experience_devopts_name"
            description="@string/setting_desktop_experience_devopts_description"
            type="system_property" />
        <setting
            id="persist.wm.debug.desktop_mode_enforce_device_restrictions"
            name="@string/setting_desktop_mode_enforce_device_restrictions_name"
            description="@string/setting_desktop_mode_enforce_device_restrictions_description"
            type="system_property" />
        <setting
            id="persist.force.desktop_first_on_default_display_for_testing"
            name="@string/setting_force_desktop_first_on_default_display_for_testing_name"
            description="@string/setting_force_desktop_first_on_default_display_for_testing_description"
            type="system_property" />
        <setting
            id="persist.wm.debug.desktop_use_window_shadows"
            name="@string/setting_desktop_use_window_shadows_name"
            description="@string/setting_desktop_use_window_shadows_description"
            type="system_property" />
        <setting
            id="persist.wm.debug.desktop_use_window_shadows_focused_window"
            name="@string/setting_desktop_use_window_shadows_focused_window_name"
            description="@string/setting_desktop_use_window_shadows_focused_window_description"
            type="system_property" />
        <setting
            id="persist.wm.debug.desktop_use_rounded_corners"
            name="@string/setting_desktop_use_rounded_corners_name"
            description="@string/setting_desktop_use_rounded_corners_description"
            type="system_property" />
        <setting
            id="persist.wm.debug.desktop_veiled_resizing"
            name="@string/setting_desktop_veiled_resizing_name"
            description="@string/setting_desktop_veiled_resizing_description"
            type="system_property" />
        <setting
            id="persist.wm.debug.desktop_support_live_wallpaper"
            name="@string/setting_desktop_support_live_wallpaper_name"
            description="@string/setting_desktop_support_live_wallpaper_description"
            type="system_property" />
        <setting
            id="persist.windowing_force_show_desktop_mode_education"
            name="@string/setting_force_show_desktop_mode_education_name"
            description="@string/setting_force_show_desktop_mode_education_description"
            type="system_property" />
        <setting
            id="persist.wm.debug.desktop_transitions.drag_to_desktop"
            name="@string/setting_desktop_transitions_drag_to_desktop_name"
            description="@string/setting_desktop_transitions_drag_to_desktop_description"
            type="system_property" />
    </category>
    <category name="Other">
        <setting
            id="secure_overlay_settings"
            name="@string/setting_secure_overlay_settings_name"
            description="@string/setting_secure_overlay_settings_description"
            type="secure" />
        <setting
            id="alert_window_bypass_low_ram"
            name="@string/setting_alert_window_bypass_low_ram_name"
            description="@string/setting_alert_window_bypass_low_ram_description"
            type="system" />
    </category>
</settings>